--- a/save-the-date/save-the-date/Info.plist
+++ b/save-the-date/save-the-date/Info.plist
@@ -21,5 +21,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Please provide your location</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Please provide your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please provide your location</string>
 </dict>
 </plist>
