--- a/save-the-date/Podfile
+++ b/save-the-date/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+# platform :ios, '17.0'
 
 target 'save-the-date' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -12,5 +12,5 @@ target 'save-the-date' do
   pod 'GooglePlaces'
   pod 'Hover'
   pod 'JGProgressHUD'
-  pod 'GoogleSignIn'
+  pod 'GoogleSignIn','~> 7.0'
 end
