--- a/save-the-date/save-the-date/Info.plist
+++ b/save-the-date/save-the-date/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.743554878223-0dh0hb1v08fqit68qhe993cfksteedi5</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,11 +32,5 @@
 			</array>
 		</dict>
 	</dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Please provide your location</string>
-	<key>NSLocationUsageDescription</key>
-	<string>Please provide your location</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Please provide your location</string>
 </dict>
 </plist>
