--- a/save-the-date/Podfile
+++ b/save-the-date/Podfile
@@ -14,4 +14,5 @@ target 'save-the-date' do
   pod 'JGProgressHUD'
   pod 'GoogleSignIn','~> 7.0'
   pod 'IQKeyboardManager'
+  pod 'IQKeyboardManagerSwift'
 end
