--- a/save-the-date/save-the-date.xcodeproj/xcshareddata/xcschemes/save-the-date.xcscheme
+++ b/save-the-date/save-the-date.xcodeproj/xcshareddata/xcschemes/save-the-date.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "742AB19A2B39642200EC69B6"
+               BuildableName = "SaveTheDateTests.xctest"
+               BlueprintName = "SaveTheDateTests"
+               ReferencedContainer = "container:save-the-date.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
