--- a/save-the-date/save-the-date/Info.plist
+++ b/save-the-date/save-the-date/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please provide your location to get a better user experience when using google map</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Please provide your location to get a better user experience when using google map</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
